--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Leo
+title: 每天一点点，进步多一点...
 subtitle:
 description: this is a web Front-end technology blog, includes html css vuejs reactjs liunx
 keywords: html css javascript vuejs reactjs nodejs webpack 
